--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,43 +1,37 @@
-/* .contactList {
-
- 
-
+ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
 }
 
-.contactListItem {
-    display: flex;
-    flex-direction: column;
-  
+li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
 }
 
+p {
+  font-size: 20px;
+  font-weight: 500;
+  margin-right: 30px;
+}
 
-
-.contactListItemIcon {
-
-} */
-
-.contactListItemBtn {
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
-  align-items: right;
-  background-color: rgba(23, 26, 32, 0.8);
-  border: none;
-  border-radius: 6px;
-  color: #fff;
-  flex-grow: 1;
-  font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
+li > button {
   font-size: 15px;
-  height: 36px;
-  line-height: 20px;
-  margin-left: 8px;
-  margin-right: 6px;
-  min-width: 50px;
-  padding: 0 16px 0 16px;
-  color: white;
+  font-weight: 700;
+  color: black;
+  padding: 5px;
+  border: none;
   cursor: pointer;
+  border-radius: 1px;
+  transition-duration: 400ms;
+  margin-left: 10px;
 }
 
-.contactListItemBtn:hover {
-  background-color: rgba(23, 26, 32, 1);
-  cursor: pointer;
+li > button:hover {
+    background-color: blue;
+    color: white;
 }
