--- a/src/pages/Contacts/Comtarts.module.css
+++ b/src/pages/Contacts/Comtarts.module.css
@@ -5,6 +5,6 @@ section {
     align-items: center;
     width: 400px;
     background-color: rgba(53, 51, 51, 0.171);
+    padding: 20px;
     
   }
-  
