--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -22,7 +22,7 @@
 }
 
 
-form {
+.form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,37 +30,46 @@ form {
   border-radius: 2px;
   padding: 30px;
   border: solid 1px;
-  
+  margin-bottom: 15px;
   box-shadow: 0px 0px 8px 0px #33333347;
 }
 
-input {
+.formLabel {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  
+
+}
+
+.formName,
+.formNumber {
   color: black;
-  margin-top: 20px;
   font-size: 20px;
   padding: 10px;
   border-radius: 0.1rem;
   border: solid 1px;
   border-radius: 2px;
-  width: 70%;
   display: block;
+  
   
 }
 
-form > button {
+.formBtn {
   font-size: 20px;
   font-weight: 800;
   color: black;
   margin-top: 30px;
   padding: 15px;
-  border: none;
+  border: solid 1px;
   cursor: pointer;
-  background-color:rgb(red, green, blue);
+  background-color: #c9c8f1;
   border-radius: 2px;
   transition-duration: 250ms;
 }
 
-form > button:hover {
+.formBtn:hover {
   /* transform: scale(1.1); */
   background-color: blue;
   color: white;
