--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,13 +1,21 @@
-label {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.filterLabel {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+ 
 
 }
 
-label > input {
+.filterName {
+  color: black;
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 0.1rem;
+  border: solid 1px;
+  border-radius: 2px;
+  display: block;
   
-  margin: 0;
 }
 
 .spanFind {
