--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,42 +1,57 @@
-.form {
+.Login_form {
   display: flex;
   flex-direction: column;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
+  border-radius: 2px;
+  padding: 30px;
+  border: solid 1px;
+  margin-bottom: 15px;
+  box-shadow: 0px 0px 8px 0px #33333347;
+  background-color: #e4e4f3;
 }
 
-.label {
-  display: flex;
-  flex-direction: column;
-  margin: 0.5rem auto;
-  align-items: center;
-  font-size: large;
-  text-align: left;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+.Login_label {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  
+}
+.Login_label_input {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  border: solid 1px;
+  display: block;
+  border-radius: 2px;
+  
 }
 
-.formBtn {
+.Login_formBtn {
   margin-top: 1rem;
   margin-bottom: 2rem;
-  background-color: rgba(23, 26, 32, 0.8);
+  background-color: #c9c8f1;
   border: none;
-  border-radius: 6px;
-  color: #fff;
+  border-radius: 2px;
+  color: black;
   flex-grow: 1;
-  font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
-  font-size: 15px;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
   height: 36px;
   line-height: 20px;
   margin-left: 8px;
   margin-right: 6px;
   min-width: 185px;
   padding: 0 16px 0 16px;
-  color: white;
   cursor: pointer;
 }
 
-.formBtn:hover {
-  background-color: rgba(23, 26, 32, 1);
+.Login_formBtn:hover {
+  transform: scale(1.1);
+  background-color: blue;
+  color: white;
   cursor: pointer;
 }
 
