--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -2,39 +2,44 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  
+  
+ 
 }
 
 .username {
+  font-size: 18px;
   font-weight: 700;
+  justify-content: center;
+
 }
 
 .logInUser {
   color: royalblue;
 }
 .btnLogin {
-  display: flex;
-  justify-items: center;
-  align-items: center;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  background-color: rgba(23, 26, 32, 0.8);
+  background-color: #c9c8f1;
   border: none;
-  border-radius: 6px;
-  color: #fff;
+  border-radius: 2px;
+  color: black;
   flex-grow: 1;
-  font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
-  font-size: 15px;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
   height: 36px;
   line-height: 20px;
   margin-left: 8px;
   margin-right: 6px;
-  min-width: 20px;
+  min-width: 185px;
   padding: 0 16px 0 16px;
-  color: white;
   cursor: pointer;
 }
 
 .btnLogin:hover {
-  background-color: rgba(23, 26, 32, 1);
+  /* transform: scale(1.1); */
+  background-color: blue;
+  color: white;
   cursor: pointer;
 }
